--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kit de Seguridad Psicológica Virtual - Takeda</title>
+    <title>Kit de Seguridad Psicológica</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #f5f7fa 0%, #e8eef3 100%); min-height: 100vh; padding: 20px; }
@@ -95,7 +95,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🧠 Kit de Seguridad Psicológica Virtual - Takeda</h1>
+            <h1>🧠 Kit de Seguridad Psicológica</h1>
             <p class="subtitle">Pequeños gestos para grandes conversaciones</p>
             <div class="hero-boat">
                 <div class="simple-boat">⛵</div>
@@ -437,3 +437,4 @@
     </script>
 </body>
 </html>
+
